[tool.poetry]
name = "tello-drone"
version = "0.1.0"
description = ""
authors = ["Nicholas Bayborodin <nicholas.bayborodin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
djitellopy2 = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
autoflake = "^1.4"
isort = "^5.7.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
